Fixing spacing

--- a/assets/css/3-sections/index/_experience.sass
+++ b/assets/css/3-sections/index/_experience.sass
@@ -26,7 +26,11 @@
 	padding-left: 10px
 	text-indent: -10px
 	+clearfix
-.exp-listUnit, .exp-listUnitSingle
+.exp-listUnit
+	display: block
+	margin-left: 3%
+	line-height: 1.6em
+.exp-listUnit-single
 	display: block
 	margin-left: 3%
 	line-height: 1.6em
